error_log.txt
warning: C:\Projects\Fusion - Programming Language\registry\crates\tensor-sparse\Cargo.toml: `default-features` is ignored for fusion_core, since `default-features` was not specified for `workspace.dependencies.fusion_core`, this could become a hard error in the future
warning: C:\Projects\Fusion - Programming Language\registry\crates\finite-fields\Cargo.toml: `default-features` is ignored for fusion_core, since `default-features` was not specified for `workspace.dependencies.fusion_core`, this could become a hard error in the future
warning: C:\Projects\Fusion - Programming Language\registry\crates\finite-fields\Cargo.toml: `default-features` is ignored for fusion_std, since `default-features` was not specified for `workspace.dependencies.fusion_std`, this could become a hard error in the future
    Checking windows-sys v0.61.2
   Compiling clap_derive v4.5.49
    Checking anstyle-wincon v3.0.11
    Checking anstyle-query v1.1.5
    Checking anstream v0.6.21
    Checking clap_builder v4.5.53
    Checking clap v4.5.53
    Checking fusion-core v0.2.0 (C:\Projects\Fusion - Programming Language\registry\crates\fusion-core)
error[E0277]: the trait bound `Qubit: Clone` is not satisfied
  --> registry\crates\fusion-core\src\types\hybrid.rs:38:13
   |
34 | #[derive(Debug, Clone, Serialize, Deserialize)]
   |                 ----- in this derive macro expansion
...
38 |     Quantum(Qubit),
   |             ^^^^^ the trait `Clone` is not implemented for `Qubit`
   |
help: consider annotating `Qubit` with `#[derive(Clone)]`
  --> registry\crates\fusion-core\src\types\quantum.rs:5:1
   |
 5 + #[derive(Clone)]
 6 | pub struct Qubit {
   |

error[E0277]: the trait bound `ClassicalType: serde::Serialize` is not satisfied
   --> registry\crates\fusion-core\src\types\hybrid.rs:34:24
    |
 34 | #[derive(Debug, Clone, Serialize, Deserialize)]
    |                        ^^^^^^^^^ the trait `Serialize` is not implemented for `ClassicalType`
 35 | pub enum HybridValue {
 36 |     Classical(ClassicalType),
    |               ------------- required by a bound introduced by this call
    |
    = note: for local types consider adding `#[derive(serde::Serialize)]` to your `ClassicalType` type
    = note: for types from other crates check whether the crate offers a `serde` feature flag
    = help: the following other types implement trait `Serialize`:
              &'a T
              &'a mut T
              ()
              (T,)
              (T0, T1)
              (T0, T1, T2)
              (T0, T1, T2, T3)
              (T0, T1, T2, T3, T4)
            and 133 others
note: required by a bound in `serialize_newtype_variant`
   --> C:\Users\Matth\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\serde_core-1.0.228\src\ser\mod.rs:958:21
    |
950 |     fn serialize_newtype_variant<T>(
    |        ------------------------- required by a bound in this associated function
...
958 |         T: ?Sized + Serialize;
    |                     ^^^^^^^^^ required by this bound in `Serializer::serialize_newtype_variant`
    = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Qubit: serde::Serialize` is not satisfied
   --> registry\crates\fusion-core\src\types\hybrid.rs:34:24
    |
 34 | #[derive(Debug, Clone, Serialize, Deserialize)]
    |                        ^^^^^^^^^ the trait `Serialize` is not implemented for `Qubit`
...
 38 |     Quantum(Qubit),
    |             ----- required by a bound introduced by this call
    |
    = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Qubit` type
    = note: for types from other crates check whether the crate offers a `serde` feature flag
    = help: the following other types implement trait `Serialize`:
              &'a T
              &'a mut T
              ()
              (T,)
              (T0, T1)
              (T0, T1, T2)
              (T0, T1, T2, T3)
              (T0, T1, T2, T3, T4)
            and 133 others
note: required by a bound in `serialize_newtype_variant`
   --> C:\Users\Matth\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\serde_core-1.0.228\src\ser\mod.rs:958:21
    |
950 |     fn serialize_newtype_variant<T>(
    |        ------------------------- required by a bound in this associated function
...
958 |         T: ?Sized + Serialize;
    |                     ^^^^^^^^^ required by this bound in `Serializer::serialize_newtype_variant`
    = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ClassicalType: serde::Deserialize<'de>` is not satisfied
    --> registry\crates\fusion-core\src\types\hybrid.rs:36:15
     |
  36 |     Classical(ClassicalType),
     |               ^^^^^^^^^^^^^ the trait `Deserialize<'_>` is not implemented for `ClassicalType`
     |
     = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `ClassicalType` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `Deserialize<'de>`:
               &'a Path
               &'a [u8]
               &'a str
               ()
               (T,)
               (T0, T1)
               (T0, T1, T2)
               (T0, T1, T2, T3)
             and 148 others
note: required by a bound in `newtype_variant`
    --> C:\Users\Matth\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\serde_core-1.0.228\src\de\mod.rs:2182:12
     |
2180 |     fn newtype_variant<T>(self) -> Result<T, Self::Error>
     |        --------------- required by a bound in this associated function
2181 |     where
2182 |         T: Deserialize<'de>,
     |            ^^^^^^^^^^^^^^^^ required by this bound in `VariantAccess::newtype_variant`

error[E0277]: the trait bound `Qubit: serde::Deserialize<'de>` is not satisfied
    --> registry\crates\fusion-core\src\types\hybrid.rs:38:13
     |
  38 |     Quantum(Qubit),
     |             ^^^^^ the trait `Deserialize<'_>` is not implemented for `Qubit`
     |
     = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `Qubit` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `Deserialize<'de>`:
               &'a Path
               &'a [u8]
               &'a str
               ()
               (T,)
               (T0, T1)
               (T0, T1, T2)
               (T0, T1, T2, T3)
             and 148 others
note: required by a bound in `newtype_variant`
    --> C:\Users\Matth\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\serde_core-1.0.228\src\de\mod.rs:2182:12
     |
2180 |     fn newtype_variant<T>(self) -> Result<T, Self::Error>
     |        --------------- required by a bound in this associated function
2181 |     where
2182 |         T: Deserialize<'de>,
     |            ^^^^^^^^^^^^^^^^ required by this bound in `VariantAccess::newtype_variant`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `fusion-core` (lib) due to 5 previous errors
